Исправление недочетов, рефакторинг