@@ -8,12 +8,11 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
-import ru.sovcombank.petbackendaccounts.api.response.CreateAccountResponse;
-import ru.sovcombank.petbackendaccounts.api.response.DeleteAccountResponse;
-import ru.sovcombank.petbackendaccounts.api.response.MessageErrorResponse;
+import ru.sovcombank.petbackendaccounts.model.api.response.CreateAccountResponse;
+import ru.sovcombank.petbackendaccounts.model.api.response.DeleteAccountResponse;
+import ru.sovcombank.petbackendaccounts.model.api.response.MessageErrorResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Глобальный обработчик исключений для управления ошибками в приложении.
@@ -40,9 +39,9 @@ public class GlobalExceptionHandler {
         List<String> invalidFields = ex.getBindingResult().getAllErrors()
                 .stream()
                 .map(error -> ((FieldError) error).getField())
-                .collect(Collectors.toList());
+                .toList();
 
-        String errorMessage = "Некорректный запрос по полю " + String.join(", ", invalidFields);
+        String errorMessage = String.format("Некорректный запрос по полю %s", String.join(", ", invalidFields));
 
         return new ResponseEntity<>(new MessageErrorResponse(errorMessage), HttpStatus.BAD_REQUEST);
     }
